--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>List of Users</h1>
-<table class="table table-striped">
+<table class="table table-dark">
   <thead>
     <tr>
       <th>User ID</th> <br/>
@@ -21,7 +21,16 @@
         <td><%= user.email %></td>
         <td><%= user.phone_number %></td>
         <td><%= user.country %></td>
+         <td>
+          <%= link_to 'View', user_path(user) %>
+          <%= link_to 'Delete', user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to 'Edit', edit_user_path(user) %>
+        </td>       
+
+
+
       </tr>
     <% end %>
   </tbody>
 </table>
+  <%= button_to "Sign out", destroy_user_session_path, method: :delete%> 
