--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,10 +7,10 @@
   <%= form.text_field :first_name %>
   
   <%= form.label :Middlename %>
-  <%= form.text_field :Middle_name %>
+  <%= form.text_field :middle_name %>
 
   <%= form.label :firstname %>
-  <%= form.text_field :Last_name %>
+  <%= form.text_field :last_name %>
 
   <%= form.label :Email %>
   <%= form.email_field :email %>
