--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -47,5 +47,8 @@
     <% end %>
   </tbody>
 </table>
-  <%= button_to "Sign out", destroy_user_session_path, method: :delete , data: { confirm: "Are you sure you want to sign out?" } %> 
+  <%= button_to "Sign out", destroy_user_session_path, method: :delete , data: { confirm: "Are you sure you want to sign out?" }%> 
 
+<% if @pagy.present? %>
+  <%= paginate @pagy %>
+<% end %>
