--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %> 
- <div> Currentuser:  <%= current_user.email %> </div> 
+ <div> <b>Current User: </b> <%= current_user.email %> </div> 
 <% end %>
 
 
@@ -49,6 +49,7 @@
 </table>
   <%= button_to "Sign out", destroy_user_session_path, method: :delete , data: { confirm: "Are you sure you want to sign out?" }%> 
 
-<% if @pagy.present? %>
-  <%= paginate @pagy %>
+<% if @user.present? %>
+  <%= paginate @user %>
 <% end %>
+<%= link_to 'Export to CSV', export_csv_users_path(format: :csv) %>
