--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,5 +6,6 @@
 <p>Email: <%= @user.email %></p>
 <p>PhoneNumber: <%= @user.phone_number %></p>
 <p>Country: <%= @user.country %></p>
-<%= link_to 'Delete', user_path(@user), method: :delete, data: { confirm: 'Are you sure?' } %>
-<%= link_to 'Edit', edit_user_path(@user) %>
+<%= link_to 'Delete', user_path(@user), method: :delete, data: { confirm: 'Are you sure?' } %><br/>
+<%= link_to 'Edit', edit_user_path(@user) %><br/>
+<%= link_to 'Export to CSV', export_csv_users_path(format: :csv) %>
