--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,7 +21,7 @@
   <%= form.label :Country %>
   <%= form.text_field :country %>
  
- <%= form.label :Image %>
+ <%= form.label :image, "Upload Profile Picture" %>
   <%= form.file_field :image, accept: 'image/png, image/gif, image/jpeg'  %>
 
   <%= form.submit 'Update' %>
