--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -48,6 +48,7 @@
   </tbody>
 </table>
   <%= button_to "Sign out", destroy_user_session_path, method: :delete , data: { confirm: "Are you sure you want to sign out?" }%> 
+<%= link_to 'Export to CSV', export_csv_users_path(format: :csv) %><br/>
 
 <% if @user.present? %>
   <%= paginate @user %>
