--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,13 @@
-
-
-
-<h1>Edit User</h1>
-<%= form_with(model: @user, url: user_path(@user), method: :patch) do |form| %>
+  <h1>Edit User</h1>
+  <%= form_with(model: @user, url: user_path(@user), method: :patch) do |form| %>
+  
   <%= form.label :Firstname %>
   <%= form.text_field :first_name %>
   
   <%= form.label :Middlename %>
   <%= form.text_field :middle_name %>
 
-  <%= form.label :firstname %>
+  <%= form.label :lastname %>
   <%= form.text_field :last_name %>
 
   <%= form.label :Email %>
@@ -19,10 +17,12 @@
   <%= form.text_field :phone_number %>
 
   <%= form.label :Country %>
-  <%= form.text_field :country %>
+  <%= form.select :country, User::Country_options %>
  
- <%= form.label :image, "Upload Profile Picture" %>
+  <%= form.label :image, "Upload Profile Picture" %>
   <%= form.file_field :image, accept: 'image/png, image/gif, image/jpeg'  %>
 
   <%= form.submit 'Update' %>
+  <%= link_to 'Back', users_path, class: 'btn btn-secondary' %>
+
 <% end %>
