added selection of camps

--- a/app/views/camps/edit.html.erb
+++ b/app/views/camps/edit.html.erb
@@ -17,6 +17,11 @@
     <%= f.date_field :start_date, class: 'form-control' %>
   </div>
   
+  <div class="form-group">
+    <%= f.label :end_date %>
+    <%= f.date_field :end_date, class: 'form-control' %>
+  </div>
+  
   <div class="text-center">
     <%= f.submit "Update Camp", class: 'btn btn-primary' %>
     </div>
