--- a/app/views/camps/index.html.erb
+++ b/app/views/camps/index.html.erb
@@ -1,20 +1,30 @@
   <h1>List of Camps</h1>
   <%= form_tag(camps_path, method: :get) do %>
-  <%= text_field_tag :search, params[:search], placeholder: "Search by title, or ID" %>
+  <%= text_field_tag :search, params[:search],
+  placeholder: "Search by title, or ID" %>
   <%= submit_tag "Search" %>
   <% end %>
 
-  <%= link_to 'Add New Camp location', new_camp_path, class: 'btn btn-primary',style: 'height: 55px; width: 150px; position: absolute; top: 25; left: 71%; transform: translate(-50%, 1%);' %>
+  <%= link_to 'Add New Camp location', new_camp_path,
+  class: 'btn btn-primary',style: 'height: 55px; width: 150px;
+  position: absolute; top: 25; left: 76%; transform: translate(-50%, 1%);' %>
 
   <b><h1> List of Camps </h1></b>
 <table class="table table-dark">
   <thead>
     <tr>
-  <th><%= link_to 'ID', sort_camps_camps_path(column: :id, direction: toggle_direction(:id)) %></th>
-  <th><%= link_to 'Title', sort_camps_camps_path(column: :title, direction: toggle_direction(:title)) %></th>
-  <th><%= link_to 'Location', sort_camps_camps_path(column: :location, direction: toggle_direction(:location)) %></th>  
+  <th><%= link_to 'ID', sort_camps_camps_path(
+    column: :id, direction: toggle_direction(:id)
+      ) %></th>
+  <th><%= link_to 'Title', sort_camps_camps_path(
+    column: :title, direction: toggle_direction(:title)
+    ) %></th>
+  <th><%= link_to 'Location', sort_camps_camps_path(
+    column: :location, direction: toggle_direction(:location)
+      ) %></th>  
   <th>Status</th>
-  <th>Date</th>
+  <th>Start Date</th>
+  <th>End Date</th>
     </tr>
   </thead>
   <tbody>
@@ -25,7 +35,8 @@
         <td><%= camp.location %></td>
         <td><%= camp.status %></td>
         <td><%= camp.start_date%>
-
+        <td><%= camp.end_date%>
+         
         <td>
           <%= link_to 'Status', status_camp_path(camp), method: :patch %>
           <%= link_to 'View', camp_path(camp), class: 'btn btn-primary'  %>
