--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,7 +34,8 @@
         
          <td>
           <%= link_to 'View', user_path(user), class: 'btn btn-primary' %>
-          <%= link_to 'Delete', user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+          <%= link_to 'Delete', user_path(user), method: :delete,
+          data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
           <%= link_to 'Edit', edit_user_path(user), class: 'btn btn-primary' %>
         </td>       
       </tr>
